--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-form": "^5.2.3",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.13.0"
   }
