--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-devtools": "^3.2.0"
   },
   "dependencies": {
+    "axios": "^0.14.0",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.7.4",
