added S3 bucket to site

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 COVERALLS_REPO_TOKEN = "qHp6V3f4aqTwNYn98H7pucemJJIg6mmpM"
+AWS_ACCESS_KEY_ID = "AKIAJQ52QBZQHFDKHVCQ"
+AWS_SECRET_ACCESS_KEY = "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"
+S3_BUCKET = "sbna-production"
